cilium-networkpolicies/traefik-networkpolicies/netpol-traefik-common.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-traefik-common
  namespace: traefik
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
