cilium-networkpolicies/traefik-networkpolicies/traefik-egress-dns-and-host.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-dns-and-host
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  - toEntities:
    - host  # Allow to host (includes API server)
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
