cilium-networkpolicies/traefik-networkpolicies/traefik-egress-endpoints.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-endpoints
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  egress:
    - toFQDNs:
        - matchName: acme-v02.api.letsencrypt.org
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: update.traefik.io
      toPorts:
        - ports:
            - port: "443"
